Refactor toRepresentation for toConvertCollection method